k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-api
  labels:
    app: mlops-api
spec:
  type: NodePort
  selector:
    app: mlops-api
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
